--- a/ex-1/style.css
+++ b/ex-1/style.css
@@ -1,5 +1,6 @@
-/* Start coding here  */
-.ex-btn {
+.ex-btn,
+.ex-btn-warning,
+.ex-btn-success {
   padding: 4px 15px;
   border-radius: 5px;
   font-size: 18px;
